[package]
name = "klayopt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
main_error = "0.1.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.58"

[profile.dev.package."*"]
opt-level = 3
